Add support for intermediatePlaces in the RoutingRequest